7110832: ctw/.../org_apache_avalon_composition_util_StringHelper crashes the VM

Distance is too large for one short branch in string_indexofC8().

Reviewed-by: iveresov